<?xml version="1.0" encoding="utf-8"?>
<resources>
    
<!-- Dynamic strings -->

    <string name="root">ALL</string>
    <string name="file_not_created">File could not be created!</string>
    <string name="file_not_found">File could not be found!</string>
    <string name="unwritten_file">File could not be written!</string>
    <string name="unread_file">File could not be read!</string>
    <string name="warning">Warning!</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="update">Modify</string>
    <string name="modify">Modification</string>
    <string name="rename">Rename</string>
    <string name="delete">Suppression</string>
    <string name="new_name">New name</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="dialog_box_rename">Do you really want to rename this item?</string>
    <string name="dialog_box_delete">Do you really want to delete this item?</string>
    <string name="dialog_box_update">Do you really want to modify this item?</string>
    <string name="external_memory_not_found">Problem of storage rights or memory not found!</string>
    <string name="dialog_box_no_delete">You can not delete this item!</string>
    <string name="dialog_box_incorrect_field">Please complete all fields correctly!</string>
    <string name="dialog_box_already_exist">This item already exists!</string>
    <string name="dialog_box_name">Please give a name to the item!</string>
    <string name="no_selected_element">No item selected!</string>
    <string name="all_grammars">All grammars&#8230;</string>
    <string name="child_grammar">Grammars of the child&#8230;</string>
    <string name="selected_element">Select an item</string>
    <string name="category">Category: </string>
    <string name="child_logs">Logs of the child: </string>
    <string name="word_not_found">Word no longer exists&#8230;</string>
    <string name="empty_session">Empty session&#8230;</string>
    <string name="select_parent_category">Select a category to which add a sub-category</string>
   
<!-- Strings related to login -->  
    
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Identifier</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This identifier is invalid!</string>
    <string name="error_invalid_password">This password is too short!</string>
    <string name="error_incorrect_password">This password is incorrect!</string>
    <string name="error_field_required">This field is required!</string>    
    
<!-- Graphic strings -->

    <string name="app_name">PictiTab</string>
    <string name="settings">Settings</string>
    <string name="title_activity_children_administration">ChildrenAdministration</string>
    <string name="title_activity_select_grammar">SelectGrammarActivity</string>
    <string name="title_activity_select_category">SelectCategoryActivity</string>
    <string name="title_activity_select_lexicon">SelectLexiconActivity</string>
    <string name="title_activity_grammar_administration">GrammarAdministrationActivity</string>
    <string name="title_activity_lexicon_administration">LexiconAdministrationActivity</string>
    <string name="title_activity_category_administration">CategoryAdministrationActivity</string>
    <string name="title_activity_select_children">SelectChildrenActivity</string>
    <string name="title_activity_child_log">ChildLogActivity</string>
    <string name="title_activity_child_communication">ChildCommunicationActivity</string>
    <string name="title_activity_tree_category">TreeCategoryActivity</string>
    <string name="mode_enfant">Children</string>
    <string name="mode_educateur">Educator</string>
    <string name="children_profiles_manager">Children profiles management</string>
    <string name="lexicon_manager">Lexicon entries management</string>
    <string name="grammars_manager">Grammars management</string>
    <string name="categories_manager">Categories management</string>
    <string name="situations_manager">Situations management</string>
    <string name="add_child">Add a child</string>
    <string name="valid">OK!</string>
    <string name="suppression">Remove</string>
    <string name="child_last_name">Child\'s last name</string>
    <string name="child_first_name">Child\'s first name</string>
    <string name="child_profile_edition">Edition of a child profile</string>
    <string name="category_edition">Edition of a category</string>
    <string name="category_name">Category\'s name</string>
    <string name="grammar_edition">Edition of a grammar</string>
    <string name="title_lexicon_administration">Edition of a lexicon entry</string>
    <string name="lexicon_hint_word">Word</string>
    <string name="selectLexiconTitle">Selection of a entry to update</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="search_in_device">Find on your device</string>
    <string name="url_picture">Get from an URL</string>
    <string name="enter_url">Paste an URL here</string>
    <string name="shoot_picture">Take a picture</string>
    <string name="selected_picture">Selected picture</string>
    <string name="add_category">Add a category</string>
    <string name="add_grammar">Add a grammar</string>
    <string name="logs">Historic</string>
    
    <string name="birthdate">Birthdate</string>
    <string name="grammar_name">Grammar\'s name</string>
    <string name="rule_edition">Edition of a Rule</string>
    <string name="add_rule">Add a rule</string>
    <string name="small_screen">Thank for your interest but PictiTab is reserved for the tablet. \nYou can follow the project or participate on <a href="https://github.com/FerreroJeremy/PictiTab">GitHub</a>.</string>
    <string name="home_text">You can follow the project or participate on <a href="https://github.com/FerreroJeremy/PictiTab">GitHub</a>.</string>
    
	<string name="item">item</string>
    <string name="items">items</string>
    <string name="parent_directory">Parent directory</string>
</resources>