<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingTop="@dimen/layout_padding_top" >

    <Button
        android:id="@+id/selectChildAdministration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:text="@string/children_profiles_manager"
        android:textSize="30sp" />

    <Button
        android:id="@+id/selectLexiconAdministration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:text="@string/lexicon_manager"
        android:textSize="30sp" />

    <Button
        android:id="@+id/selectGrammarAdministration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:text="@string/grammars_manager"
        android:textSize="30sp" />

    <Button
        android:id="@+id/selectCategoryAdministration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:text="@string/categories_manager"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="UselessLeaf" >
    </LinearLayout>

</LinearLayout>