<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".LexiconAdministrationActivity" >

    <TextView
        android:id="@+id/small_screen_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_lexicon_administration"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="639dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/lexicon_hint_word"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/normal_text_size"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/lexicon_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:hint="@string/lexicon_hint_word" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textCatSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/no_selected_element"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/normal_text_size"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:paddingTop="@dimen/normal_padding"
            android:text="@string/choose_picture"
            android:textColor="@color/black_color"
            android:textSize="@dimen/normal_text_size"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/lexiconImageView"
                    android:layout_width="154dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="0.63"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/selected_picture"
                    android:src="@drawable/photo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/lexiconFileButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/search_in_device"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/lexiconCameraButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/shoot_picture"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/lexiconUrlButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/url_picture" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <ImageButton
                    android:id="@+id/previousButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="26dp"
                    android:src="@android:drawable/ic_media_previous"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="ScrollViewSize" >

                    <ExpandableListView
                        android:id="@+id/expListCat"
                        android:layout_width="366dp"
                        android:layout_height="310dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="30dp"
                        tools:ignore="InefficientWeight" >

                    </ExpandableListView>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/lexiconDeleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="@dimen/normal_padding"
        android:text="@string/suppression" />

    <Button
        android:id="@+id/lexiconValidateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="@dimen/normal_padding"
        android:text="@string/valid" />

</LinearLayout>