<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustPan" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/child_profile_edition"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:paddingTop="@dimen/normal_padding"
                android:text="@string/child_last_name"
                android:textColor="@color/black_color"
                android:textSize="@dimen/normal_text_size"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:paddingTop="@dimen/normal_padding"
                android:text="@string/child_first_name"
                android:textColor="@color/black_color"
                android:textSize="@dimen/normal_text_size"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="245dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:paddingTop="@dimen/normal_padding"
                    android:text="@string/birthdate"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/normal_text_size"
                    tools:ignore="HardcodedText" />

                <DatePicker
                    android:id="@+id/birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:calendarViewShown="false" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/picImg"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="50dp"
                android:background="@null"
                android:contentDescription="@string/shoot_picture"
                android:scaleType="fitCenter"
                android:src="@drawable/photo" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:ignore="UselessParent,NestedWeights" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:orientation="vertical" >

                <ExpandableListView
                    android:id="@+id/expandableListView1"
                    android:layout_width="299dp"
                    android:layout_height="230dp" >
                </ExpandableListView>
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ExpandableListView
                    android:id="@+id/expandableListView2"
                    android:layout_width="match_parent"
                    android:layout_height="230dp" >
                </ExpandableListView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="DisableBaselineAlignment" >

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:orientation="vertical" >

            <Button
                android:id="@+id/supprimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:text="@string/suppression" />

            <Button
                android:id="@+id/valider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="@dimen/normal_padding"
                android:text="@string/valid" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.13"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imageButtonClear"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:src="@android:drawable/ic_menu_recent_history"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>