<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#c6ecfc"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="-300dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/large_padding"
            android:layout_weight="0.12"
            android:orientation="vertical"
            tools:ignore="UselessLeaf" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="DisableBaselineAlignment,UselessParent" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="140dp"
                        android:layout_height="132dp"
                        android:layout_gravity="left"
                        android:src="@drawable/ic_picti_gd"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="30dp"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    tools:ignore="InefficientWeight" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:text="PictiTab"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black_color"
                        android:textSize="40sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/black_color"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="#c6ecfc"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/DARK_GREY"
            android:textColorHint="@color/DARK_GREY" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#c6ecfc"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/DARK_GREY"
            android:textColorHint="@color/DARK_GREY" />

        <!-- Login Button -->

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/DARK_GREY"
            android:text="@string/action_sign_in"
            android:textColor="#c6ecfc" />
    </LinearLayout>

</LinearLayout>